# model-familiarity-engine

./: .gitignore  CONTRIBUTING.md  README.md  VISION.md  pyproject.toml
data/: sample_tasks.json
src/model_familiarity/: __init__.py  card.py  floor.py  judge.py  pilot.py  redact.py  replay.py  report.py  tasks.py
src/model_familiarity/providers/: __init__.py  base.py  bedrock.py  claude_cli.py  openai_compat.py
tests/: test_bedrock.py  test_familiarity.py  test_redact.py
