[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-familiarity-engine"
version = "0.1.0"
description = "Build evidence-backed model cards from replayed known-outcome tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aria Han", email = "aria@ariaxhan.com" },
]
keywords = ["llm", "model-routing", "model-cards", "replay", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "boto3>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
model-familiarity = "model_familiarity.pilot:main"

[project.urls]
Homepage = "https://github.com/ariaxhan/model-familiarity-engine"
Repository = "https://github.com/ariaxhan/model-familiarity-engine"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/model_familiarity/tasks.py" = ["E501"]
"src/model_familiarity/floor.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
